# nifti

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yaml
src/: cnifti.h  nifti1_io.h  niftilib.c
